Create and style the navigation bar

--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
     <header id="header">
         <div class="header__wrap-left"></div>
         <div class="header__wrap-right"></div>
-        <div class="nav"></div>
+        <div class="navbar">
+            <div class="logo"><img src="./images/Home-icon.png" alt="logo"></div>
+            <div class="line"></div>
+            <nav class="nav">
+                <ol>
+                <li ><a href="#index.html" class="active"><span>00</span> HOME</a></li>
+                <li><a href="#destination"><span>01</span> DESTINATION</a></li>
+                <li><a href="#crew"><span>02</span> CREW</a></li>
+                <li><a href="#technologies"><span> 03</span>TECHNOLOGIES</a></li>
+
+            </ol>
+        </nav>
+        </div>
         <div class="header_content">
                 
             <h5>SO, YOU WANT TO TRAVEL TO</h5>
