Active and hover state interactivity on the navbar

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 
             </div> 
         <div class="header__btn">
-                <a href="#" class="btn">EXPLORE</a>
+                <a href="#" class="landing-btn">EXPLORE</a>
             </div>
     </header>
 </body>
