Marked up the destination section

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="dist/css/main.css"> -->
     <link rel="stylesheet" href="styles/main.css">
-    <title>Welcome | SPACE</title>
+    <title>Welcome Home | SPACE ADVENTURE</title>
 </head>
 <body>
-    <header id="header">
+    <header id="home">
         <div class="header__wrap-left"></div>
         <div class="header__wrap-right"></div>
         <div class="navbar">
@@ -17,10 +17,10 @@
             <div class="line"></div>
             <nav class="nav">
                 <ol>
-                <li ><a href="#index.html" class="active"><span>00</span> HOME</a></li>
-                <li><a href="#destination"><span>01</span> DESTINATION</a></li>
-                <li><a href="#crew"><span>02</span> CREW</a></li>
-                <li><a href="#technologies"><span> 03</span>TECHNOLOGIES</a></li>
+                <li ><a href="index.html" class="active"><span>00</span> HOME</a></li>
+                <li><a href="destination.html"><span>01</span> DESTINATION</a></li>
+                <li><a href="crew.html"><span>02</span> CREW</a></li>
+                <li><a href="technologies.html"><span> 03</span>TECHNOLOGIES</a></li>
 
             </ol>
         </nav>
