Fixed a couple of font sizes issues on the landing page

--- a/destination.html
+++ b/destination.html
@@ -25,7 +25,7 @@
         </div>
         <div class="content__wrap">
             <div class="content__wrap-img" id="moon">
-                <h5>Pick your destination</h5>
+                <h5 class="heading-5"><span>01</span> Pick your destination</h5>
                 <div class="image"></div>
             </div>
             <div class="content__wrap-text">
