Styled the destinations page

--- a/destination.html
+++ b/destination.html
@@ -37,8 +37,8 @@
                         <li><a href="#titan">TITAN</a></li>
                     </ul>
                 </nav>
-                <h2>MOON</h2>
-                <p>See our planet as you’ve never seen it before. A perfect relaxing trip away to help regain perspective and come back refreshed. While you’re there, take in some history by visiting the Luna 2 and Apollo 11 landing sites.</p>
+                <h2 class="content-heading">MOON</h2>
+                <p class="content-para">See our planet as you’ve never seen it before. A perfect relaxing trip away to help regain perspective and come back refreshed. While you’re there, take in some history by visiting the Luna 2 and Apollo 11 landing sites.</p>
                 <footer class="content__wrap-footer">
                     <div class="foot-distance">
                         <p class="foot-text-sm">AVG. DISTANCE</p>
