--- a/destination.html
+++ b/destination.html
@@ -23,15 +23,17 @@
             </ol>
         </nav>
         </div>
-        <div class="content__wrap">
-            <div class="content__wrap-img" id="moon">
+        <!-- MOON SECTION -->
+        <div class="container">
+        <section class="content__wrap" id="moon">
+            <div class="content__wrap-img" >
                 <h5 class="heading-5"><span>01</span> Pick your destination</h5>
-                <div class="image"></div>
+                <div class="image moon-img"></div>
             </div>
             <div class="content__wrap-text">
                 <nav class="content__wrap-nav">
                     <ul>
-                        <li><a href="#moon">MOON</a></li>
+                        <li><a href="#moon" class="active">MOON</a></li>
                         <li><a href="#mars">MARS</a></li>
                         <li><a href="#europa">EUROPA</a></li>
                         <li><a href="#titan">TITAN</a></li>
@@ -50,7 +52,104 @@
                     </div>
                 </footer>
             </div>
-        </div>
         </section>
+    </div>
+        
+        <!-- MARS SECTION -->
+        <div class="container">
+        <section class="content__wrap" id="mars">
+            <div class="content__wrap-img" >
+                <h5 class="heading-5"><span>01</span> Pick your destination</h5>
+                <div class="image mars-img"></div>
+            </div>
+            <div class="content__wrap-text">
+                <nav class="content__wrap-nav">
+                    <ul>
+                        <li><a href="#moon" >MOON</a></li>
+                        <li><a href="#mars" class="active">MARS</a></li>
+                        <li><a href="#europa">EUROPA</a></li>
+                        <li><a href="#titan">TITAN</a></li>
+                    </ul>
+                </nav>
+                <h2 class="content-heading">MARS</h2>
+                <p class="content-para">Don’t forget to pack your hiking boots. You’ll need them to tackle Olympus Mons, the tallest planetary mountain in our solar system. It’s two and a half times the size of Everest!</p>
+                <footer class="content__wrap-footer">
+                    <div class="foot-distance">
+                        <p class="foot-text-sm">AVG. DISTANCE</p>
+                        <p class="foot-text-lg">225 MIL. km</p>
+                    </div>
+                    <div class="foot-time">
+                        <p class="foot-text-sm">Est. travel time</p>
+                        <p class="foot-text-lg">9 months</p>
+                    </div>
+                </footer>
+            </div>
+        </section>
+    </div>
+
+        <!-- EUROPA SECTION -->
+        <div class="container">
+        <section class="content__wrap" id="europa">
+            <div class="content__wrap-img" >
+                <h5 class="heading-5"><span>01</span> Pick your destination</h5>
+                <div class="image europa-img"></div>
+            </div>
+            <div class="content__wrap-text">
+                <nav class="content__wrap-nav">
+                    <ul>
+                        <li><a href="#moon" >MOON</a></li>
+                        <li><a href="#mars">MARS</a></li>
+                        <li><a href="#europa" class="active">EUROPA</a></li>
+                        <li><a href="#titan">TITAN</a></li>
+                    </ul>
+                </nav>
+                <h2 class="content-heading">EUROPA</h2>
+                <p class="content-para">The smallest of the four Galilean moons orbiting Jupiter, Europa is a winter lover’s dream. With an icy surface, it’s perfect for a bit of ice skating, curling, hockey, or simple relaxation in your snug wintery cabin.</p>
+                <footer class="content__wrap-footer">
+                    <div class="foot-distance">
+                        <p class="foot-text-sm">AVG. DISTANCE</p>
+                        <p class="foot-text-lg">628 MIL. km</p>
+                    </div>
+                    <div class="foot-time">
+                        <p class="foot-text-sm">Est. travel time</p>
+                        <p class="foot-text-lg">3 years</p>
+                    </div>
+                </footer>
+            </div>
+        </section>
+    </div>
+
+        <!-- TITAN SECTION -->
+        <div class="container">
+        <section class="content__wrap" id="titan">
+            <div class="content__wrap-img" >
+                <h5 class="heading-5"><span>01</span> Pick your destination</h5>
+                <div class="image titan-img"></div>
+            </div>
+            <div class="content__wrap-text">
+                <nav class="content__wrap-nav">
+                    <ul>
+                        <li><a href="#moon" >MOON</a></li>
+                        <li><a href="#mars">MARS</a></li>
+                        <li><a href="#europa">EUROPA</a></li>
+                        <li><a href="#titan" class="active">TITAN</a></li>
+                    </ul>
+                </nav>
+                <h2 class="content-heading">TITAN</h2>
+                <p class="content-para">The only moon known to have a dense atmosphere other than Earth, Titan is a home away from home (just a few hundred degrees colder!). As a bonus, you get striking views of the Rings of Saturn.</p>
+                <footer class="content__wrap-footer">
+                    <div class="foot-distance">
+                        <p class="foot-text-sm">AVG. DISTANCE</p>
+                        <p class="foot-text-lg">1.6 BIL. km</p>
+                    </div>
+                    <div class="foot-time">
+                        <p class="foot-text-sm">Est. travel time</p>
+                        <p class="foot-text-lg">7 years</p>
+                    </div>
+                </footer>
+            </div>
+        </section>
+    </div>
+    </section>
 </body>
 </html>
