Marked up and styled the crew page

--- a/destination.html
+++ b/destination.html
@@ -25,7 +25,7 @@
         </div>
         <!-- MOON SECTION -->
         <div class="container">
-        <section class="content__wrap" id="moon">
+        <section class="u-content__wrap" id="moon">
             <div class="content__wrap-img" >
                 <h5 class="heading-5"><span>01</span> Pick your destination</h5>
                 <div class="image moon-img"></div>
@@ -57,7 +57,7 @@
         
         <!-- MARS SECTION -->
         <div class="container">
-        <section class="content__wrap" id="mars">
+        <section class="u-content__wrap" id="mars">
             <div class="content__wrap-img" >
                 <h5 class="heading-5"><span>01</span> Pick your destination</h5>
                 <div class="image mars-img"></div>
@@ -89,7 +89,7 @@
 
         <!-- EUROPA SECTION -->
         <div class="container">
-        <section class="content__wrap" id="europa">
+        <section class="u-content__wrap" id="europa">
             <div class="content__wrap-img" >
                 <h5 class="heading-5"><span>01</span> Pick your destination</h5>
                 <div class="image europa-img"></div>
@@ -121,7 +121,7 @@
 
         <!-- TITAN SECTION -->
         <div class="container">
-        <section class="content__wrap" id="titan">
+        <section class="u-content__wrap" id="titan">
             <div class="content__wrap-img" >
                 <h5 class="heading-5"><span>01</span> Pick your destination</h5>
                 <div class="image titan-img"></div>
