Marked up and styled the technologies page

--- a/crew.html
+++ b/crew.html
@@ -18,7 +18,7 @@
                 <li ><a href="index.html" ><span>00</span> HOME</a></li>
                 <li><a href="destination.html" ><span>01</span> DESTINATION</a></li>
                 <li><a href="crew.html" class="active"><span>02</span> CREW</a></li>
-                <li><a href="technologies.html"><span> 03</span>TECHNOLOGIES</a></li>
+                <li><a href="tech.html"><span> 03</span>TECHNOLOGIES</a></li>
 
             </ol>
         </nav>
