--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="dist/css/main.css"> -->
     <link rel="stylesheet" href="styles/main.css">
-    <title>SPACE ADVENTURE | Welcome Home </title>
+    <title>SPACE TOURISM | Welcome Home </title>
 </head>
 <body>
     <header id="home">
